data/derived/comb/progs/unify/prog5865.ml.out
Characters 553-587:
  | SqXPlusY (e1,e2)      -> ((eval (e1,x,y)) *. (eval (e1,x,y)) + eval (e2,x,y));;
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
